# codebase-explorer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FileManagerNode.cpp  Makefile  README.md  a.out  cmake_install.cmake  compile_commands.json  dependencies2.txt  example  nc.cpp  output.json  perf.data
.cache/clangd/index/: PathHash.h.9B6B7AF56E35C97B.idx  cliPrint.h.22201174D93D6B0D.idx  controller.h.4A4DBF9A8360EBF9.idx  depTree.h.4DF8478654547C71.idx  dirTree.h.F49F4D2B5A8C5F5B.idx  jsonView.h.E50C0674075BFEFF.idx  main.cpp.8825D42360AD0622.idx  nodeInterface.h.2D7CDC4B66019B6D.idx  treeInterface.h.136685C93DD96218.idx  viewInterface.h.1E86287700632800.idx
a.out.dSYM/Contents/Resources/DWARF/: a.out
a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/Components/: ForceTree.js  LinePlot.js  ToolDrawer.js
frontend/src/Components/ToolDrawer/: DirPicker.js
src/: FileManagerNode.h  a.out  fileManager.cpp  fileManager.h  main.cpp
src/controller/: controller.h  main.cpp
src/model/: PathHash.h  depTree.h  dirTree.h  dirTreeNode.h  dirTreeNode.h.gch  nodeInterface.h  treeInterface.h
src/view/: cliPrint.h  jsonView.h  terminalView.h  viewInterface.h
srcJS/: main.js  package.json
srcJS/controller/: controller.js
srcJS/model/: depTree.js  dirTree.js  nodeInterface.js
srcJS/view/: cliPrint.js  viewInterface.js
